[gd_scene load_steps=2 format=3 uid="uid://4dingqb4evfp"]

[ext_resource type="Script" path="res://dev/savefile.gd" id="1_na66w"]

[node name="Window" type="Window"]
title = "save"
initial_position = 1
size = Vector2i(300, 120)
visible = false
exclusive = true
unresizable = true
script = ExtResource("1_na66w")

[node name="SavePattern" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -50.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
text = "save"

[node name="LineEdit" type="LineEdit" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
clear_button_enabled = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="SavePattern" to="." method="_on_save_pattern_pressed"]
